--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,22 +1,36 @@
 {
-    "name": "rag-frontend",
-    "version": "1.0.0",
-    "private": true,
-    "dependencies": {
-      "@emotion/react": "^11.10.6",
-      "@emotion/styled": "^11.10.6",
-      "@mui/material": "^5.13.1",
-      "axios": "^1.4.0",
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0",
-      "react-query": "^3.39.2",
-      "react-scripts": "5.0.1",
-      "websocket": "^1.0.34"
-    },
-    "scripts": {
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "test": "react-scripts test",
-      "eject": "react-scripts eject"
-    }
-  }  
+  "name": "rag-frontend",
+  "version": "1.0.0",
+  "private": true,
+  "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^6.4.6",
+    "@mui/material": "^6.4.6",
+    "axios": "^1.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.2",
+    "react-router-dom": "^7.2.0",
+    "react-scripts": "5.0.1",
+    "websocket": "^1.0.34"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
+}
