--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,14 @@
-# Use a lightweight Python image
 FROM python:3.9
 
-# Set the working directory
+# Set working directory
 WORKDIR /app
 
-# Copy files into the container
-COPY backend/requirements.txt ./
+# Copy requirements and install dependencies
+COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY backend/ ./
-
-# Load environment variables
-ENV OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
+# Copy the rest of the application
+COPY . ./
 
 # Run FastAPI
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
